# ift2245

./: .gitignore  README.md  names.txt
.github/classroom/: autograding.json
.github/workflows/: autograding.yml
src/: common.h  main.c  main.h  parser.c  parser.h  pm.c  pm.h  process.c  process.h  pt.c  pt.h  ready_queue.c  ready_queue.h  shell.c  tlb.c  tlb.h  tokenizer.c  vmm.c  vmm.h  worker.c  worker.h
test/: CMakeLists.txt  autograder.py  autograder_config.yaml  ready_queue_tests.c  test_grader.csv  test_quick.csv
test/autograding/: autograder.py
test/tests_build/: Makefile
tp0/: README.md
tp0/.github/classroom/: autograding.json
tp0/.github/workflows/: classroom.yml
tp0/src/: CMakeLists.txt  main.c  main.h  seven_lines
tp0/test/: CMakeLists.txt
tp1/: .gitignore  CMakeLists.txt  README.md  names_validator.py
tp1/cmake/: dependencies.cmake  testing.cmake
tp1/src/: CMakeLists.txt  shell.c  tokenizer.c  tokenizer.h
tp1/test/: autograder_config.yaml
tp2/: .gitignore  CMakeLists.txt  README.md  names_validator.py
tp2/.github/classroom/: autograding.json
tp2/.github/workflows/: autograding.yml
tp2/cmake/: dependencies.cmake  testing.cmake
tp2/src/: CMakeLists.txt  main.c  os.c  os.h  process.c  ready_queue.c  ready_queue.h  worker.c
tp2/test/: CMakeLists.txt  baselines.csv  ready_queue_tests.c  test_12_p.csv  test_30_p.csv  test_50_p.csv  test_abc_50_5.csv  test_generator.py  test_quick.csv
tp3/: .gitignore  README.md
tp3/.github/workflows/: autograding.yml
tp3/src/: common.c  conf.h  pm.c  pt.c  tlb.c  tlb.h  vmm.c  vmm.h
tp3/test_check/: checks.c
tp4/: .gitignore  README.md
tp4/src/: main.c
tp4/test/tests_build/: CMakeCache.txt  cmake_install.cmake
